objects/tffa__JobErrorLog__c.object
<CustomObject>
    <description>All errors logged by batch jobs</description>
    <fields>
        <fullName>tffa__ApexClass__c</fullName>
        <description>The Apex job class name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__AsyncApexJobId__c</fullName>
        <description>The AsyncApexJob record for the batch Apex job that fired this event.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Async Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DoesExceedJobScopeMaxLength__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the JobScope field is truncated due to the message exceeding the character limit.</description>
        <label>Does Exceed Job Scope Max Length</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExceptionType__c</fullName>
        <description>The Apex exception type name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__JobName__c</fullName>
        <description>Name of the job as identified in the system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__JobScope__c</fullName>
        <description>The Record IDs that are in scope if the event was fired from the execute() method of a batch job. If the batch job uses custom iterators instead of sObjects, JobScope is the toString() representation of the iterable objects. Maximum length is 40000 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Scope</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Message__c</fullName>
        <description>Exception message text. Maximum length is 5000 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__RequestId__c</fullName>
        <description>The unique ID of the batch job that fired the event. Event monitoring customers can use this information to correlate the error with logging information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__StackTrace__c</fullName>
        <description>The Apex stacktrace of the exception, if available. Maximum length is 5000 characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Stack Trace</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Job Error Log</label>
    <nameField>
        <displayFormat>JE-{0000000000}</displayFormat>
        <label>Job Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>